fix alignment of chart on mobile screens

--- a/src/components/Expenses.css
+++ b/src/components/Expenses.css
@@ -78,6 +78,7 @@ form.customExpense input {
     .groupSummary {
         flex-direction: column;
         text-align: center;
+        align-items: center;
     }
 }
 
